--- a/map/index.html
+++ b/map/index.html
@@ -10,7 +10,7 @@ Reflection Places
 📍 Loading location...
 </button> </div><div class="bg-white dark:bg-gray-800 rounded-lg p-4 shadow-sm hover:shadow-md transition-shadow duration-200"> <h3 class="font-serif font-semibold text-gray-900 dark:text-gray-100 mb-2"> <a href="/TheNomadUpupa/posts/2024-03-15-firenze-rinascimento/" class="hover:text-warm-600 dark:hover:text-warm-400 transition-colors"> Wandering Through Renaissance Florence </a> </h3> <time class="text-sm text-gray-500 dark:text-gray-400 mb-2 block"> March 15, 2024 </time> <button onclick="focusMarker(1)" class="text-sm text-warm-600 dark:text-warm-400 hover:text-warm-700 dark:hover:text-warm-300 transition-colors font-medium" id="location-1">
 📍 Loading location...
-</button> </div> </div> </div> </div> </div>  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.9.4/leaflet.min.css" integrity="sha512-h9FcoyWjHcOcmEVkxOfTLnmZFWIH0iZhZT1H2TbOq55xssQGEJHEaIm+PgoUaZbRvQTNTluNOEfb1ZRy6D3BOw==" crossorigin="anonymous"> <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.9.4/leaflet.min.js" integrity="sha512-BwHfrr4c9kmRkLw6iXFdzcdWV/PGkVgiIyIWLLlTSXzWQzxuSg4DiQUCpauz/EWjgk5TYQqX/kvn9pG1NpYfqg==" crossorigin="anonymous"></script> <style>
+</button> </div> </div> </div> </div> </div>  <link rel="stylesheet" href="/TheNomadUpupa/libs/leaflet/leaflet.css"> <script src="/TheNomadUpupa/libs/leaflet/leaflet.js"></script> <style>
         /* Light theme popup styles */
         .leaflet-popup-content-wrapper {
           background: white;
